--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "element-ui": "^2.14.1",
     "mavon-editor": "^2.9.1",
+    "qs": "^6.9.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
